--- a/src/AbpCachingPlayground.HttpApi.Host/appsettings.json
+++ b/src/AbpCachingPlayground.HttpApi.Host/appsettings.json
@@ -19,4 +19,14 @@
   },
   "StringEncryption": {
     "DefaultPassPhrase": "VhkoUtmT7Ajx2Vfx"
-  }}
+  },
+  "Aspire": {
+    "StackExchange": {
+      "Redis": {
+        "ConfigurationOptions": {
+          "AllowAdmin": true
+        }
+      }
+    }
+  }
+}
