Add K6, InfluxDB, and Grafana support
Introduce new components for K6 load testing, including InfluxDB for data storage and Grafana for visualization. This enhances the application's capabilities to perform load testing and monitor results effectively. The integration allows users to visualize performance metrics in real-time, improving analysis and decision-making processes during testing phases. Additionally, streamline Redis configuration by removing unnecessary code comments that could lead to confusion.

--- a/src/AbpCachingPlayground.RedisCacheAppHost/AbpCachingPlayground.RedisCacheAppHost.csproj
+++ b/src/AbpCachingPlayground.RedisCacheAppHost/AbpCachingPlayground.RedisCacheAppHost.csproj
@@ -23,6 +23,7 @@
     <ProjectReference Include="..\AbpCachingPlayground.HttpApi.Host\AbpCachingPlayground.HttpApi.Host.csproj" />
     <ProjectReference Include="..\AbpCachingPlayground.ServiceDefaults\AbpCachingPlayground.ServiceDefaults.csproj" />
     <ProjectReference Include="..\AbpCachingPlayground.Web\AbpCachingPlayground.Web.csproj" />
+    <ProjectReference Include="..\K6.Hosting\K6.Hosting.csproj" IsAspireProjectResource="false" />
   </ItemGroup>
 
 </Project>
