--- a/src/AbpFusionCache/AbpFusionCache.csproj
+++ b/src/AbpFusionCache/AbpFusionCache.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="Volo.Abp.Caching" Version="9.0.4" />
     <PackageReference Include="ZiggyCreatures.FusionCache" Version="2.1.0" />
+    <PackageReference Include="ZiggyCreatures.FusionCache.Serialization.SystemTextJson" Version="2.1.0" />
   </ItemGroup>
 
 </Project>
