Start refactoring to allow change in caching provider
Introduce Redis caching support by adding new caching modules for both Fusion and Redis. Update application settings to specify the caching provider as Redis, enhancing flexibility in cache management. Modify program initialization to conditionally configure Redis services based on the specified provider, improving adaptability for different environments. This change streamlines integration with Redis, allowing for better performance and scalability in caching operations across the application.

--- a/src/AbpCachingPlayground.AuthServer/appsettings.json
+++ b/src/AbpCachingPlayground.AuthServer/appsettings.json
@@ -16,6 +16,9 @@
   "StringEncryption": {
     "DefaultPassPhrase": "VhkoUtmT7Ajx2Vfx"
   },
+  "CachingDemo": {
+    "Provider": "redis"
+  },
   "Redis": {
     "Configuration": "127.0.0.1"
   }
