--- a/src/AbpCachingPlayground.HttpApi.Host/appsettings.json
+++ b/src/AbpCachingPlayground.HttpApi.Host/appsettings.json
@@ -5,6 +5,9 @@
     "DisablePII": false,
     "HealthCheckUrl": "/health-status"
   },
+  "CachingDemo": {
+    "Provider": "redis"
+  },
   "ConnectionStrings": {
     "Default": "Server=(LocalDb)\\MSSQLLocalDB;Database=AbpCachingPlayground;Trusted_Connection=True;TrustServerCertificate=true"
   },
