--- a/src/AbpCachingPlayground.Web/appsettings.json
+++ b/src/AbpCachingPlayground.Web/appsettings.json
@@ -11,6 +11,9 @@
       "BaseUrl": "https://localhost:44347/"
     }
   },
+  "CachingDemo": {
+    "Provider": "redis"
+  },
   "Redis": {
     "Configuration": "127.0.0.1"
   },
