--- a/src/AbpCachingPlayground.HttpApi.Host/AbpCachingPlayground.HttpApi.Host.csproj
+++ b/src/AbpCachingPlayground.HttpApi.Host/AbpCachingPlayground.HttpApi.Host.csproj
@@ -23,7 +23,6 @@
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="9.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.MicrosoftAccount" Version="9.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Twitter" Version="9.0.0" />
-    <PackageReference Include="DistributedLock.Redis" Version="1.0.3" />
     <PackageReference Include="Serilog.Sinks.OpenTelemetry" Version="4.1.1" />
   </ItemGroup>
 
@@ -32,7 +31,6 @@
     <PackageReference Include="Volo.Abp.Autofac" Version="9.0.4" />
     <PackageReference Include="Volo.Abp.AspNetCore.Serilog" Version="9.0.4" />
     <PackageReference Include="Volo.Abp.Identity.AspNetCore" Version="9.0.4" />
-    <PackageReference Include="Volo.Abp.Caching.StackExchangeRedis" Version="9.0.4" />
     <PackageReference Include="Volo.Abp.DistributedLocking" Version="9.0.4" />
     <PackageReference Include="Volo.Abp.Swashbuckle" Version="9.0.4" />
     <PackageReference Include="Volo.Abp.AspNetCore.Authentication.JwtBearer" Version="9.0.4" />
@@ -40,8 +38,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\AbpCachingPlayground.Application\AbpCachingPlayground.Application.csproj" />
+    <ProjectReference Include="..\AbpCachingPlayground.Fusion.CachingModule\AbpCachingPlayground.Fusion.CachingModule.csproj" />
     <ProjectReference Include="..\AbpCachingPlayground.HttpApi\AbpCachingPlayground.HttpApi.csproj" />
     <ProjectReference Include="..\AbpCachingPlayground.EntityFrameworkCore\AbpCachingPlayground.EntityFrameworkCore.csproj" />
+    <ProjectReference Include="..\AbpCachingPlayground.Redis.CachingModule\AbpCachingPlayground.Redis.CachingModule.csproj" />
     <ProjectReference Include="..\AbpCachingPlayground.ServiceDefaults\AbpCachingPlayground.ServiceDefaults.csproj" />
   </ItemGroup>
 
